--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     Bazar da Magá
   </title>
   <meta charset="utf-8">
-  <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
@@ -13,7 +13,7 @@
   <!-- Optional theme -->
   <!-- link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" -->
 
-  <link rel="stylesheet" href="http://bootswatch.com/lumen/bootstrap.min.css" />
+  <link rel="stylesheet" href="//bootswatch.com/lumen/bootstrap.min.css" />
 
   <!-- Latest compiled and minified JavaScript -->
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
